[package]
name = "selthi"
version = "0.1.0"
edition = "2021"
author = "João Ribeiro"
repository = "https://github.com/anotherlusitano/selthi"
description = "A Rust library for building interactive prompts with or without images"
license = "MIT"
keywords = ["cli", "prompt", "image", "terminal", "ueberzug"]

[dependencies]
crossterm = "0.27.0"
ueberzug = { version = "0.1.0", optional = true }

[features]
default = []
with_images = ["ueberzug"]
