[package]
name = "selthi"
version = "0.2.2"
edition = "2021"
author = "João Ribeiro"
repository = "https://github.com/anotherlusitano/selthi"
description = "A Rust library for building interactive prompts"
license = "MIT"
keywords = ["cli", "prompt", "image", "terminal", "ueberzug"]

[dependencies]
crossterm = "0.27.0"
ueberzug = { version = "0.1.0", optional = true }

[features]
default = []
with_images = ["ueberzug"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "default"

[[example]]
name = "input"

[[example]]
name = "images"
required-features = ["with_images"]
